--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "fe-assignment-lab-frontend",
   "private": true,
   "version": "1.0.0",
-  "description": "This repository was created by Emily for Roto, Jeffrey and Lucas.",
   "main": "index.html",
   "scripts": {
     "test": "jest --config=jest.config.js",
-    "start": "http-server . -c-1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/learn-programmers/fe-assignment-lab.git"
+    "start": "http-server . -c-1",
+    "build": "webpack --mode=production",
+    "lint": "eslint src/**/*.js"
   },
   "keywords": [
     "programmers",
@@ -19,16 +16,21 @@
   ],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/learn-programmers/fe-assignment-lab/issues"
-  },
-  "homepage": "https://github.com/learn-programmers/test-zone#readme",
-  "dependencies": {},
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "babel-jest": "^25.1.0",
     "http-server": "^0.12.0",
     "jest": "^24.9.0"
-  }
+  },
+  "description": "- Javascript\r - CSS",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Dojinkyung/cat-searcher.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Dojinkyung/cat-searcher/issues"
+  },
+  "homepage": "https://github.com/Dojinkyung/cat-searcher#readme"
 }
